# bevaring-cli

./: .editorconfig  .gitignore  LICENSE  README.md  USAGE.md  app.toml  pyproject.toml  usage.py
.github/: dependabot.yaml
.github/workflows/: continous-integration.yaml
bevaring_cli/: Cmd.py  __init__.py  app.toml  auth.py  auth_prod.py  bevaring_client.py  config.py  exceptions.py  main.py  utils.py
bevaring_cli/auth/: authentication.py  core.py  utils.py
bevaring_cli/commands/: __init__.py  app.py  auth.py  cmd.py  datasett.py  session.py
tests/: auth_mock.py  conftest.py  test_app.py  test_auth.py  test_datasett  test_datasett.py  test_main.py  test_session.py  test_utils.py
