[tool.poetry]
name = "bevaring-cli"
version = "0.1.0"
description = "CLI tool to work with bevaring"
readme = "README.md"
authors = [
  "Ole-Martin Bratteng <olebra@arkivverket.no>",
]

[tool.poetry.scripts]
bevaring = "bevaring_cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.6.1"}
msal = "^1.18.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
flake8 = "^5.0.4"
autopep8 = "^1.7.0"
mypy = "^0.971"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
